--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.8",
     "typescript": "^4.4.2",
+    "use-between": "^1.3.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
